--- a/resources-logic/src/main/res/values/strings.xml
+++ b/resources-logic/src/main/res/values/strings.xml
@@ -58,7 +58,9 @@
     <string name="content_description_user_icon">User</string>
     <string name="content_description_id_icon">Id</string>
     <string name="content_description_id_stroke_icon">Id stroke</string>
-    <string name="content_description_logo_icon">Logo icon</string>
+    <string name="content_description_logo_full_icon">Full Logo icon</string>
+    <string name="content_description_logo_plain_icon">Plain Logo icon</string>
+    <string name="content_description_logo_text_icon">Text Logo icon</string>
     <string name="content_description_arrow_up_icon">Arrow up</string>
     <string name="content_description_arrow_down_icon">Arrow down</string>
     <string name="content_description_visibility_icon">Show</string>
