--- a/resources-logic/src/main/res/values/strings.xml
+++ b/resources-logic/src/main/res/values/strings.xml
@@ -104,13 +104,14 @@
     <!-- Biometric prompt -->
     <string name="biometric_prompt_title">Biometric authentication</string>
     <string name="biometric_prompt_subtitle">Authenticate using your biometrics</string>
-    <string name="biometric_login_prompt_title">Login</string>
-    <string name="biometric_login_prompt_subtitle">Use your biometrics to login</string>
-    <string name="biometric_login_prompt_quickPinOnlySubTitle">Type your quick pin to login</string>
+    <string name="biometric_login_title">Welcome back</string>
+    <string name="biometric_login_biometrics_enabled_subtitle">Use your biometrics to access the EUDI Wallet.</string>
+    <string name="biometric_login_biometrics_not_enabled_subtitle">To access the EUDI Wallet you need to provide your PIN.</string>
 
     <!-- Biometrics -->
     <string name="biometric_no_hardware">Your device does not support biometric authentication</string>
     <string name="biometric_unknown_error">Something went wrong initializing biometric authentication. Please try again</string>
+    <string name="biometric_default_mode_text_above_pin_field">PIN</string>">
 
     <!-- Quick Pin -->
     <string name="quick_pin_invalid_error">Invalid quick pin</string>
@@ -157,8 +158,8 @@
     <string name="loading_subtitle">Please wait…</string>
     <string name="loading_success_config_title">@string/generic_success</string>
     <string name="loading_success_config_primary_button_text">@string/generic_continue_capitalized</string>
-    <string name="loading_biometry_share_subtitle">Use your biometrics to share information</string>
-    <string name="loading_quick_pin_share_subtitle">Type your quick pin to share information</string>
+    <string name="loading_biometry_biometrics_enabled_description">Use your biometrics to approve the transaction.</string>
+    <string name="loading_biometry_biometrics_not_enabled_description">To approve the transaction you need to verify your identity.</string>
 
     <!-- Login -->
     <string name="welcome_login_button_title">LOGIN</string>
